k8s/manifests/azure/b3o/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: b3o-tcc
  name: b3o-tcc-deployment
  namespace: b3o
spec:
  replicas: 3
  selector:
    matchLabels:
      app: b3o-tcc
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: b3o-tcc
    spec:
      containers:
      - image: bcorreia/go-helloworld:v0.1.1 # {"$imagepolicy": "flux-system:b3o-tcc"}
        name: go-helloworld
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          periodSeconds: 15
        resources:
          requests:
            cpu: "5m"
            memory: "10Mi"
          limits:
            cpu: "10m"
            memory: "20Mi"
